创建 springboot web项目9

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,14 @@
         </includes>
         <filtering>true</filtering>
       </resource>
+      <resource>
+        <directory>src/main/webapp</directory>
+        <!--注意此次必须要放在此目录下才能被访问到 -->
+        <targetPath>META-INF/resources</targetPath>
+        <includes>
+          <include>**/**</include>
+        </includes>
+      </resource>
     </resources>
     <plugins>
       <!-- java编译插件 -->
