--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.4.1</version>
+      <version>4.5.2</version>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
@@ -92,8 +92,65 @@
       <artifactId>mybatis-spring-boot-starter</artifactId>
       <version>1.1.1</version>
     </dependency>
+    <!-- 文件下载-->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.17</version>
+    </dependency>
+     <dependency>
+         <groupId>com.itextpdf</groupId>
+         <artifactId>itextpdf</artifactId>
+         <version>5.5.10</version>
+     </dependency>
+    <dependency>
+           <groupId>com.itextpdf</groupId>
+           <artifactId>itext-asian</artifactId>
+           <version>5.2.0</version>
+       </dependency>
+    <dependency>
+      <groupId>com.itextpdf.tool</groupId>
+      <artifactId>xmlworker</artifactId>
+      <version>5.5.8</version>
+    </dependency>
+      <dependency>
+          <groupId>com.lowagie</groupId>
+          <artifactId>itext</artifactId>
+          <version>2.1.7</version>
+      </dependency>
+    <dependency>
+      <groupId>commons-httpclient</groupId>
+      <artifactId>commons-httpclient</artifactId>
+      <version>3.1</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.xhtmlrenderer/core-renderer -->
+    <dependency>
+      <groupId>org.xhtmlrenderer</groupId>
+      <artifactId>flying-saucer-pdf</artifactId>
+      <version>9.0.8</version>
+    </dependency>
+   <!-- 抓取网页内容工具-->
+      <dependency>
+        <groupId>net.sourceforge.htmlunit</groupId>
+        <artifactId>htmlunit</artifactId>
+        <version>2.27</version>
+      </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.11.3</version>
+    </dependency>
+    <dependency>
+      <groupId>xml-apis</groupId>
+      <artifactId>xml-apis</artifactId>
+      <version>1.4.01</version>
+    </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.11.0</version>
+    </dependency>
   </dependencies>
-
   <build>
 
     <!--打包后的项目名称  -->
