--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,9 @@
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
 
-
-# 数据库的URL、帐号、密码、驱动，dbname是自己数据库中表空间的对应的名字，请修改为自己本地一致的
+spring.mvc.pathmatch.use-suffix-pattern=true
+spring.mvc.pathmatch.use-registered-suffix-pattern=true
+# ??????URL????????????????dbname???????????б??????????????????????????????
 spring.datasource.url = jdbc:mysql://192.168.0.199:3306/rcgtest2018?useUnicode = true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username = rcg_test
 spring.datasource.password = A./$mz658
@@ -13,9 +14,9 @@ spring.datasource.password = A./$mz658
 #spring.datasource.password = YuMaiWang3327..
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# 使用druid连接池
+# ???druid?????
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-#连接池的配置信息
+#?????????????
 spring.datasource.initialSize=5
 spring.datasource.minIdle=5
 spring.datasource.maxActive=20
